--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Rasskris/Chat-BE#readme",
   "dependencies": {
+    "@types/lodash": "^4.14.199",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "socket.io": "^4.2.0"
   },
   "devDependencies": {
